# alpha-forge

./: .env.example  .gitignore  AGENTS.md  ALPHAFORGE_CODE_LOGIC_REVIEW.md  AlphaForge_System_Specification.md  CLAUDE.md  GEMINI.md  MVP_ROADMAP.md  QUICKSTART.md  README.md  REPORT.md  plan.md  pyproject.toml  start-dev.sh  start.sh  stop.sh  test_mvp2_features.py
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
examples/: discovery_example.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BacktestChart.tsx  CommandTerminal.tsx  FactorZoo.tsx  Header.tsx  MetricsGrid.tsx  ParetoFrontViz.tsx  StrategyDiscovery.tsx  StrategyFactory.tsx  StrategyList.tsx  ValidationPipeline.tsx  ValidationRunner.tsx
frontend/lib/: api.ts
src/alphaforge/: __init__.py  cli.py
src/alphaforge/analysis/: __init__.py  attribution.py
src/alphaforge/api/: __init__.py  server.py  storage.py
src/alphaforge/backtest/: __init__.py  engine.py  event_driven.py  impact.py  metrics.py  portfolio.py  trades.py
src/alphaforge/data/: __init__.py  alfred.py  bitemporal.py  loader.py  pit.py  quality.py  schema.py  universe.py
src/alphaforge/discovery/: __init__.py  orchestrator.py
src/alphaforge/discovery/evolution/: __init__.py  nsga3.py  population.py
src/alphaforge/discovery/expression/: __init__.py  compiler.py  nodes.py  tree.py  types.py
src/alphaforge/discovery/operators/: __init__.py  crossover.py  mutation.py  selection.py
src/alphaforge/evolution/: genomes.py  protocol.py
src/alphaforge/factory/: __init__.py  genetic.py  orchestrator.py
src/alphaforge/features/: __init__.py  advanced_technical.py  llm_safety.py  lookahead.py  store.py  technical.py
src/alphaforge/monitoring/: __init__.py  cusum.py
src/alphaforge/optimization/: __init__.py  base.py  grid.py  optuna.py  random.py
src/alphaforge/strategy/: __init__.py  genome.py  signals.py  templates.py
src/alphaforge/tracking/: __init__.py  mlflow.py
src/alphaforge/validation/: __init__.py  cpcv.py  dsr.py  pbo.py  pipeline.py  regime.py  spa.py  stress.py  walk_forward.py
src/data/cache/: SPY_184cd2347d04.json  SPY_184cd2347d04.parquet  SPY_867ef85d80ec.json  SPY_867ef85d80ec.parquet
tests/: __init__.py  conftest.py
tests/test_api/: test_persistence.py
tests/test_backtest/: __init__.py  test_engine.py  test_event_driven.py  test_execution_realism.py  test_impact.py  test_trades.py
tests/test_data/: test_alfred.py  test_bitemporal.py  test_loader.py  test_quality.py  test_universe.py
tests/test_discovery/: __init__.py  test_expression_tree.py  test_integration_minimal.py  test_nsga3.py  test_operators.py  test_orchestrator_logic.py
tests/test_factory/: __init__.py  test_genetic.py  test_orchestrator.py
tests/test_features/: __init__.py  test_advanced.py  test_technical.py
tests/test_monitoring/: test_cusum.py
tests/test_optimization/: test_optimizers.py
tests/test_strategy/: __init__.py  test_genome.py
tests/test_validation/: __init__.py  test_cpcv.py  test_dsr.py  test_pbo_logic.py  test_regime.py  test_spa.py  test_stress.py
