[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaforge"
version = "0.1.0"
description = "Production-grade platform for systematic trading strategy discovery, validation, and deployment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AlphaForge Team" }
]
keywords = ["trading", "quantitative-finance", "backtesting", "strategy-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=1.0",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "mlflow>=2.10",
    "click>=8.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.36",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "arch>=6.0",
    "deap>=1.4",
    "optuna>=3.0",
    "statsmodels>=0.14",
    "numba>=0.59",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
    "types-requests>=2.31",
]

[project.scripts]
alphaforge = "alphaforge.cli:main"

[project.urls]
Homepage = "https://github.com/alphaforge/alpha-forge"
Documentation = "https://alphaforge.readthedocs.io"
Repository = "https://github.com/alphaforge/alpha-forge"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaforge"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["alphaforge"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "mlflow.*",
    "arch.*",
    "deap.*",
    "optuna.*",
    "statsmodels.*",
    "numba.*",
    "joblib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/alphaforge"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
